--- a/configs/iotrpi0w_defconfig
+++ b/configs/iotrpi0w_defconfig
@@ -47,3 +47,6 @@ BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_WIRINGPI=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
