--- a/configs/iotopi0w_defconfig
+++ b/configs/iotopi0w_defconfig
@@ -42,6 +42,7 @@ BR2_PACKAGE_ARMBIAN_FIRMWARE=y
 BR2_PACKAGE_ARMBIAN_FIRMWARE_XR819=y
 
 # wireless support
+BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
@@ -68,3 +69,4 @@ BR2_PTHREAD_DEBUG=y
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_WIRINGPI=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
