--- a/configs/iotrpi0w_defconfig
+++ b/configs/iotrpi0w_defconfig
@@ -47,6 +47,17 @@ BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_WIRINGPI=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
-BR2_PACKAGE_WPA_SUPPLICANT=y
+
+#Packages required to make wifi work
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_CRDA=y
+BR2_PACKAGE_IW=y
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
+BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
+BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
+BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
