Adding files to support wlan0 enable on boot
network interface file and wpa_supplicant file
is added to both raspberry pi zero w and orange
pi zero board directory seperately so that it
does not conflict with existing files of buildroot
To use these files in your network - simply replace
your own ssid and psk in wpa_supplicant.conf - rest
all work as is

Signed-off-by: Chakra Divi <chakra@openedev.com>

--- a/configs/iotopi0w_defconfig
+++ b/configs/iotopi0w_defconfig
@@ -70,3 +70,4 @@ BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_WIRINGPI=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
+BR2_ROOTFS_OVERLAY="board/orangepi/orangepi-zero/iotw-overlay"
