Adding iotw application pkg in buildroot
Signed-off-by: Chakra Divi <chakra@openedev.com>

--- a/configs/iotrpi0w_defconfig
+++ b/configs/iotrpi0w_defconfig
@@ -61,3 +61,4 @@ BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
 BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
+BR2_PACKAGE_IOTWAPP=y
