--- a/configs/iotopi0w_defconfig
+++ b/configs/iotopi0w_defconfig
@@ -71,3 +71,4 @@ BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_WIRINGPI=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
 BR2_ROOTFS_OVERLAY="board/orangepi/orangepi-zero/iotw-overlay"
+BR2_PACKAGE_IOTWAPP=y
