--- a/configs/iotopi0w_defconfig
+++ b/configs/iotopi0w_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_MTD=y
 
 #iot wireless packages
+BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBXML2=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_DROPBEAR=y
