--- a/configs/iotrpi0w_defconfig
+++ b/configs/iotrpi0w_defconfig
@@ -31,6 +31,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="--add-pi3-miniuart-bt-overlay"
 BR2_ROOTFS_OVERLAY="board/raspberrypi/iotw-overlay/"
 
 #iot wireless packages
+BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBXML2=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_DROPBEAR=y
